# glb

./: .bzrignore  .gitignore  BUGS  CONTRIBUTING.md  CONTRIBUTORS.txt  CONTRIBUTOR_AGREEMENT.txt  ChangeLog  Makefile.am  README  README.md  README.packaging  bootstrap.sh  configure.ac  glbd.spec
debian/: changelog  control  copyright  glbd.default  glbd.docs  glbd.examples  glbd.init  postinst  postrm  preinst  prerm  rules
doc/: Doxyfile  Makefile.am
files/: Makefile.am  README  curl.sh  glbd.cfg  glbd.service  glbd.sh  glbd@.service  mysql.sh
packaging/: build_all.sh
packaging/deb/: Dockerfile  build.sh  entrypoint.sh
packaging/rpm/: Dockerfile  build.sh  entrypoint.sh
src/: Makefile.am  glb_cmd.c  glb_cmd.h  glb_cnf.c  glb_cnf.h  glb_conf.c  glb_conf.h  glb_control.c  glb_control.h  glb_daemon.c  glb_daemon.h  glb_dst.c  glb_dst.h  glb_env.c  glb_env.h  glb_lib.c  glb_limits.c  glb_limits.h  glb_listener.c  glb_listener.h  glb_log.c  glb_log.h  glb_macros.h  glb_main.c  glb_misc.c  glb_misc.h  glb_opt.h  glb_pool.c  glb_pool.h  glb_pool_conn.c  glb_pool_conn.h  glb_pool_dst.c  glb_pool_dst.h  glb_pool_stats.h  glb_proc.c  glb_proc.h  glb_router.c  glb_router.h  glb_signal.c  glb_signal.h  (+11 more)
